frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-app-container
          image: ashish727/microfinancefrontend
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-app-service
spec:
  selector:
    app: frontend-app
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
